Fix: Adapting the collapse content area

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -16,6 +16,8 @@
             background-color: #FF6060;
             color: #fff;
             border-radius: 5px;
+            z-index: 1;
+            position: relative;
         }
         .collapse__icon {
             width: 32px;
@@ -41,7 +43,10 @@
             opacity: 0;
             background-color: rgba(246, 246, 246, 0.45);
             padding: 0 10px;
-            border-radius: 4px;
+            border-radius: 0 0 4px 4px;
+            margin-top: -6px;
+            padding-bottom: 6px;
+            z-index: 0;
         }
         .collapse__content.open {
             max-height: 500px;
